# Chessengine

./: .gitignore  CMakeLists.txt  Move.h  README.md  board.cpp  board.h  main.cpp  utils.cpp  utils.h
engine/: CMakeLists.txt  Move.h  board.cpp  board.h  constants.h  logger.cpp  logger.h  move.h  position.cpp  position.h  search.cpp  search.h  thread_pool.h  transposition_table.cpp  transposition_table.h  utils.cpp  utils.h
engine/pieces/: CMakeLists.txt  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawns.cpp  pawns.h  queen.cpp  queen.h  rook.cpp  rook.h
google_test/: CMakeLists.txt  bishop_test.cpp  board_test.cpp  king_test.cpp  knight_test.cpp  pawn_test.cpp  perft_test.cpp  queen_test.cpp  rook_test.cpp  thread_pool_test.cpp  transposition_table_test.cpp  tuning_test.cpp
pieces/: Piece.h  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawns.cpp  pawns.h  queen.h  rook.h
tuning/: tuning_main.h
